# reveal-slides

./: .gitignore  pyproject.toml
.claude/: settings.local.json
docs/: GETTING_STARTED.md  USAGE.md  antigravity-vs-claude-transitions.md  architecture-review.md  requirements-p2.md  restructuring-plan.md
examples/: agentic-systems-design-2026.json  ai-agents-2026.json  ai-revolution-2026.json  antigravity-vs-claude.json  human-agent-collaboration-2026.json  open-source-ai-2026.json  quarterly-review.json  when-stars-die.json
src/reveal_slides/: __init__.py  cli.py  exceptions.py  generator.py
src/reveal_slides/deck_templates/: index.json  pitch-deck.json  quarterly-review.json  technical-talk.json
src/reveal_slides/models/: __init__.py  presentation.py
src/reveal_slides/templates/: base.html.j2
src/reveal_slides/templates/css/: base.css.j2
src/reveal_slides/templates/partials/: _bullets.html.j2  _caption.html.j2  _slide_heading.html.j2
src/reveal_slides/templates/slides/: blank.html.j2  code.html.j2  content.html.j2  image.html.j2  quote.html.j2  section-break.html.j2  table.html.j2  title.html.j2  two-column.html.j2
src/reveal_slides/themes/: corporate-blue.json  index.json  tech-future.json
