[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reveal-slides"
version = "0.1.0"
description = "Generate Reveal.js slide decks from JSON using Python and Jinja."
requires-python = ">=3.9"
dependencies = [
    "Jinja2>=3.1",
    "pydantic>=2.0",
]

[project.scripts]
reveal-slides = "reveal_slides.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
reveal_slides = ["templates/**/*", "themes/**/*", "deck_templates/**/*"]
